--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
           <h2>We're a group of people on a journey to learn to love code.</h2>
         </div>
         <div class="roster-cards-container">
-          <div class="student-card" id="joe-burgess-card">
-            <a href="students/joe-burgess.html">
+          <div class="student-card" id="wendy-calderon-card">
+            <a href="students/wendy-calderon.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
               <div class="card-text-container">
-                <h4 class="student-name">Joe Burgess</h4>
-                <p class="student-location">New York, NY</p>
+                <h4 class="student-name">Wendy Calderón</h4>
+                <p class="student-location">Queens, NY</p>
               </div>
             </a>
           </div>
@@ -53,7 +53,6 @@
               </div>
             </a>
           </div>
-
         </div>
       </div>
       <footer class="footer">
