--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -14,12 +14,12 @@
           <img class="learn-logo" src="https://s3.amazonaws.com/learn-verified/logo.png"/>
         </a>
       </header>
-      <div class="profile-banner" id="joe-burgess-cover"></div>
+      <div class="profile-banner" id="wendy-calderon-cover"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="joe-burgess-card"></div>
+        <div class="profile-photo" id="wendy-calderon-card"></div>
         <div class="social-icon-container">
-          <a href="https://twitter.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="https://www.linkedin.com/in/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://twitter.com/wendisha"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
+          <a href="https://www.linkedin.com/in/wcalderon"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="https://github.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
