--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -20,7 +20,7 @@
         <div class="social-icon-container">
           <a href="https://twitter.com/wendisha"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
           <a href="https://www.linkedin.com/in/wcalderon"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="https://github.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <a href="https://github.com/wendisha"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
