--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -24,8 +24,8 @@
           <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Joe Burgess</h1>
-          <h2 class="profile-location">New York, NY</h2>
+          <h1 class="profile-name">Wendy Calderón</h1>
+          <h2 class="profile-location">Queens, NY</h2>
           <div class="profile-quote">"Reduce to a previously solved problem"</div>
         </div>
       </div>
