--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -26,7 +26,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Wendy Calderón</h1>
           <h2 class="profile-location">Queens, NY</h2>
-          <div class="profile-quote">"Reduce to a previously solved problem"</div>
+          <div class="profile-quote">"Mind over matter."</div>
         </div>
       </div>
       <div class="details-container">
