--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I grew up outside of the Washington DC (NoVA!) and went to college at Carnegie Mellon University in Pittsburgh. After college, I worked as an Oracle consultant for IBM for a bit and now I teach here at The Flatiron School.</p>
+              <p>Born and raised in Dominican Republic. Telecommunications Engineer with experience in the System Admin </p>
             </div>
           </div>
         </div>
