automatically backed up by learn

--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>Born and raised in Dominican Republic. Telecommunications Engineer with experience in the System Admin </p>
+              <p>Born and raised in Dominican Republic. Telecommunications Engineer. Mom of two little girls with big hearts and even bigger willpower! </p>
             </div>
           </div>
         </div>
