--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -46,8 +46,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Carnegie Mellon University</h4>
-              <h5>Bachelor of Science in Information Systems and Economics</h5>
+              <h4>PUCMM</h4>
+              <h5>Bachelor of Science in Telecommunications Engineering</h5>
             </div>
           </div>
         </div>
