--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -57,8 +57,8 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>The Flatiron School</h4>
-              <h5>Lead iOS Instructor</h5>
+              <h4>United Nearshore Operations</h4>
+              <h5>System Admin</h5>
             </div>
             <div class="description-holder">
               <h4>IBM</h4>
