--- a/students/wendy-calderon.html
+++ b/students/wendy-calderon.html
@@ -19,7 +19,7 @@
         <div class="profile-photo" id="wendy-calderon-card"></div>
         <div class="social-icon-container">
           <a href="https://twitter.com/wendisha"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="https://www.linkedin.com/in/wcalderon"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://www.linkedin.com/in/wendy-calderon"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="https://github.com/wendisha"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
